[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GridHandler"
version = "0.1.0"
description = "GridHandler: Utilities to connect to the ALICE Grid"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Anton Riedel", email = "anton.riede@cern.ch" }]
dependencies = [ ]

[tool.setuptools.packages.find]
where = ["."]
